--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 file.reference.a11y-checklist-app=.
 file.reference.app-src=src
 files.encoding=UTF-8
